Fixed Create task on Safari

--- a/2-JavaScript/Projects/TodoList/src/css/task.css
+++ b/2-JavaScript/Projects/TodoList/src/css/task.css
@@ -89,9 +89,6 @@
     font-size: 16px;
 }
 
-.new-task-notes {
-    height: -webkit-fill-available;
-}
 
 .new-task-title, .new-task-notes {
     width: 100%;
